Fix Css styling, overflow problem

--- a/sheets/style.css
+++ b/sheets/style.css
@@ -1,10 +1,15 @@
 html {
   font-family: Arial, Helvetica, sans-serif;
+  overflow-y: scroll;
+  --text-color: #3e3e3e;
+  --background-color-white: #f2f2f2;
+  --background-color-blue: #b3e2ff;
+  --color-green: #6b9846;
+  --color-green: #73b349;
 }
 
 body {
-  overflow-x: hidden;
-  background-color: #b3e2ff;
+  background-color: var(---background-color-blue);
 }
 
 /* Menu navigation*/
@@ -16,14 +21,13 @@ body {
 }
 
 .navbar {
-  background-color: white;
-  /*border-bottom: 1px solid black;*/
+  background-color: var(--background-color-white);
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: x-large;
 }
 
 .logo {
-  color: black;
+  color: var(--text-color);
   font-weight: 600;
 }
 .logo:hover {
@@ -45,20 +49,21 @@ body {
 }
 
 #nav-bar a:hover {
-  color: rgb(145, 64, 27);
+  color: var(--color-green);
 }
 
 #nav-bar a:active {
-  color: green;
+  color: var(--color-green);
 }
 
 /* Footer */
 
 footer {
-  position: absolute;
-}
-footer img {
-  width: 100%;
+  background-image: url('../content/img/footer.png');
+  display: block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
 }
 
 /* Forside */
@@ -68,7 +73,6 @@ footer img {
   background-color: black;
   height: 55vh;
   min-height: 20rem;
-  width: 100%;
   overflow: hidden;
 }
 
@@ -130,7 +134,7 @@ footer img {
 }
 
 .minecraft-pics img {
-  background-color: black;
+  background-color: var(--text-color);
   opacity: 0.65;
   z-index: 1;
   border: 12px solid white;
@@ -138,7 +142,7 @@ footer img {
 
 .minecraft-pics a {
   text-decoration: none;
-  color: black;
+  color: var(--text-color);
 }
 
 .minecraft-pics:hover {
